force-app/main/default/objects/Responde__c/Responde__c.object-meta.xml
<CustomObject>
    <label>日报评价回复</label>
    <nameField>
        <label>日报评价回复说明</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>日报评价回复</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>