force-app/main/default/objects/Responde__c/fields/Evaluate__c.field-meta.xml
<CustomField>
    <fullName>Evaluate__c</fullName>
    <label>*评价</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>