force-app/main/default/objects/Responde__c/fields/OwnerName__c.field-meta.xml
<CustomField>
    <fullName>OwnerName__c</fullName>
    <formula>Shop_Report__r.Daily_Inspection_Report__r.Owner:User.User_Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>*巡店日报所有人</label>
    <type>Text</type>
</CustomField>