force-app/main/default/objects/Responde__c/fields/Responde__c.field-meta.xml
<CustomField>
    <fullName>Responde__c</fullName>
    <label>回复</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>