force-app/main/default/objects/Responde__c/fields/Shop_Report__c.field-meta.xml
<CustomField>
    <fullName>Shop_Report__c</fullName>
    <label>报告评价</label>
    <referenceTo>Shop_Report__c</referenceTo>
    <relationshipLabel>日报评价回复</relationshipLabel>
    <relationshipName>Responde</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>