force-app/main/default/objects/Responde__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>回复用户</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Responde_User</relationshipName>
    <type>Lookup</type>
</CustomField>